Add Twilio diagnostics and realtime dialect tooling

--- a/voip-client/src/public/index.html
+++ b/voip-client/src/public/index.html
@@ -19,6 +19,9 @@
       <button id="btn-call">Call</button>
       <button id="btn-hangup">Hangup</button>
     </div>
+    <div>
+      <strong>CallSid:</strong> <span id="call-sid">-</span>
+    </div>
     <h3>Log</h3>
     <div id="log"></div>
     <script src="/app.js"></script>
